chore: Moves properties to custom extension